--- a/filmes.html
+++ b/filmes.html
@@ -45,7 +45,7 @@
 				<td>10/03/2022</td>
 			</tr>
 			<tr>
-				<td>Tô Ryca!</td>
+				<td>Tô Ryca! 2</td>
 				<td> <a href="https://www.youtube.com/watch?v=FQ7J-3baqlo">clique aqui</a></td>
 				<td>Os caras malvados</td>
 				<td>17/03/2022</td>
